@@ -1,4 +1,9 @@
 Date and Time                 Change detail
+Feb 19, 2016  [6:43pm]        Add comment to portfolio code
+Feb 19, 2016  [3:19pm]        UI fix for default portfolio page
+Feb 19, 2016  [2:05pm]        Fix navbar CSS loading
+Feb 19, 2016  [11:32am]       Modified the UI for readability
+Feb 19, 2016  [11:14am]       Implemented player portfolio page
 Feb 19, 2016  [6:20am]        added comments to controllers and models
 Feb 19, 2016  [6:16am]        Added the players name to the nav bar when logged in
 Feb 18, 2016  [6:20am]        Styled home page
@@ -6,5 +11,3 @@ Feb 17, 2016  [4:20pm]        models created and Home page tables added
 Feb 16, 2016  [6:32pm]        Added links for bootstrap(3.3.6) and jquery(1.12.0)
 Feb 10, 2016  [12:32pm]       Added a readme and a changelog file
 Feb 9, 2016   [4:02pm]        Initial commit
-
-
